drive-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vera-drive
  namespace: vera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vera-drive
  template:
    metadata:
      labels:
        app: vera-drive
    spec:
      containers:
        - name: drive
          image: harbor.local/vera/vera-drive:v1.0.0
      imagePullSecrets:
        - name: harbor-pull
